Added macro commands

--- a/Practicals/Commands.PeterDaly/Commands.PeterDaly.vcxproj
+++ b/Practicals/Commands.PeterDaly/Commands.PeterDaly.vcxproj
@@ -123,6 +123,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="InputHandler.cpp" />
+    <ClCompile Include="MacroCommand.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -131,6 +132,7 @@
     <ClInclude Include="FireCommand.h" />
     <ClInclude Include="InputHandler.h" />
     <ClInclude Include="JumpCommand.h" />
+    <ClInclude Include="MacroCommand.h" />
     <ClInclude Include="MeeleeCommand.h" />
     <ClInclude Include="ShieldCommand.h" />
   </ItemGroup>
