--- a/Practicals/Commands.PeterDaly/Commands.PeterDaly.vcxproj.filters
+++ b/Practicals/Commands.PeterDaly/Commands.PeterDaly.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="InputHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MacroCommand.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Command.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MeeleeCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MacroCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
