Added a render system

--- a/Practicals/ECS.PeterDaly/ECS.PeterDaly.vcxproj
+++ b/Practicals/ECS.PeterDaly/ECS.PeterDaly.vcxproj
@@ -29,6 +29,7 @@
     <ClInclude Include="ControlComponent.h" />
     <ClInclude Include="ControlSystem.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="GraphicsComponent.h" />
     <ClInclude Include="HealthComponents.h" />
     <ClInclude Include="HealthSystem.h" />
     <ClInclude Include="PositionComponent.h" />
