--- a/Practicals/ECS.PeterDaly/ECS.PeterDaly.vcxproj.filters
+++ b/Practicals/ECS.PeterDaly/ECS.PeterDaly.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="AIComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GraphicsComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
